# star-atlas-ai-openfang

./: .dockerignore  .env.example  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  LICENSE  README.md  config.toml  docker-compose.yml  justfile
.claude/: settings.json
.claude/skills/: brainstorming.md  executing-plans.md  obsidian-markdown.md  self-improving-agent.md  vault-conventions.md  writing-plans.md
agents/custom/: sa-builder.toml  sa-game.toml  sa-govern.toml  sa-lore-keeper.toml
ai/kb-mcp/: collections.ron
ai/sa-kb-mcp/: Cargo.toml  README.md
ai/sa-kb-mcp/src/: cli.rs  format.rs  index.rs  main.rs  search.rs  server.rs  types.rs
ai/sa-kb-mcp/src/tools/: documents.rs  mod.rs  reindex.rs  search.rs  sections.rs
book/: book.toml
book/src/: SUMMARY.md  introduction.md
config/providers/: anthropic.toml  openai.toml  openrouter.toml
docs/: OPENFANG.md
docs/business/: sa-builder-use-case.md  sa-game-use-case.md  sa-govern-use-case.md  sa-lore-keeper-use-case.md
hands/sa-brainstorm/: HAND.toml  SKILL.md  system-prompt.md
hands/sa-knowledge-keeper/: HAND.toml  SKILL.md  system-prompt.md
hands/sa-pip-advisor/: HAND.toml  SKILL.md  system-prompt.md
hands/sa-researcher/: HAND.toml  SKILL.md  system-prompt.md
scripts/: entrypoint.sh
skills/: README.md
skills/obsidian/: SKILL.md  prompt_context.md  skill.toml
skills/self-improving-agent/: SKILL.md  prompt_context.md  skill.toml
skills/skill-vetter/: SKILL.md  prompt_context.md  skill.toml
templates/: web-fetch.hcl  web-search.hcl
vaults/community/: README.md
(+60 files in other folders)
