[package]
name = "sa-kb-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
rmcp = { version = "1.1", features = ["server", "transport-io", "schemars"] }
schemars = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tantivy = "0.25"
tokio = { version = "1", features = ["full"] }
